<resources>
    <string name="app_name">Mobco</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="receive_po">Receive po</string>
    <string name="inspection">Inspection</string>
    <string name="put_away">Put away</string>
    <string name="counting">Counting</string>
    <string name="warehouse">Warehouse</string>
    <string name="main_menu">Main Menu</string>
    <string name="purchase_orders_list">Purchase orders list</string>
    <string name="start_receive">Start receive</string>
    <string name="po_details">PO details</string>
    <string name="received_qty">Received qty</string>
    <string name="po_qty">PO qty</string>
    <string name="p_o_details">PO Details</string>
    <string name="item_code">Item code</string>
    <string name="item_description">Item Description</string>
    <string name="qty">Quantity</string>
    <string name="save">Save</string>
    <string name="start_inspection">Start inspection</string>
    <string name="rejected_qty">Rejected qty</string>
    <string name="locator">Locator</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="language_letter">ع</string>
    <string name="mobco_logo">Mobco logo</string>
    <string name="loading_3dots">Loading...</string>
    <string name="please_enter_ip_address">Please enter ip address</string>
    <string name="wrong_ip">Wrong ip!</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="locator_code">Locator code</string>
    <string name="counting_no">Counting number</string>
    <string name="counted_list">Counted list</string>
    <string name="received_list">Received list</string>
    <string name="put_away_list">Put  away list</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_username">Please enter your username!</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="receiving">Receiving</string>
    <string name="issue">Issue</string>
    <string name="transfer">Transfer</string>
    <string name="audit">Audit</string>
    <string name="returns">Returns</string>
    <string name="reports">Reports</string>
    <string name="receiving_menu">Receiving menu</string>
    <string name="receipt_no">Receipt no.</string>
    <string name="sub_inventory">Sub inventory</string>
    <string name="wrong_item_code">Wrong item code</string>
    <string name="please_scan_item_code">Please scan item code!</string>
    <string name="please_enter_receive_qty">Please enter received qty</string>
    <string name="please_enter_receipt_no">Please enter receipt number</string>
    <string name="please_enter_valid_receive_qty">Please enter valid receive qty!</string>
    <string name="scanned_item_is_fully_received">Scanned Item is fully received!</string>
    <string name="error_in_connection">Error_in_connection</string>
    <string name="organization_number">Organization number</string>
    <string name="po_number">PO number</string>
    <string name="search">Search</string>
    <string name="items_list">Items List</string>
    <string name="please_enter_organization_number">Please enter organization number!</string>
    <string name="please_enter_po_number">Please enter po number!</string>
    <string name="no_purchase_requisitions_found">No purchase requisitions  found</string>
    <string name="accepted_qty_must_be_less_or_equal_to_received_qty">Accepted quantity must be less or equal than received qty!</string>
    <string name="please_enter_accepted_qty">Please enter accepted qty</string>
    <string name="please_enter_valid_accepted_qty">Please enter valid accepted quantity</string>
    <string name="please_scan_subinventory_code">Please scan subinventory code</string>
    <string name="please_scan_locator_code">Please scan locator code</string>
    <string name="please_enter_received_quantity_first">Please enter received quantity first!</string>
    <string name="added_before">Added before!</string>
    <string name="received_qty_must_be_less_or_equal_remaining_qty">Received quantity must be less or equal remaining quantity!</string>
    <string name="enter_receiving_data_first">Enter receiving data first!</string>
    <string name="date">Date</string>
</resources>