<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.ReceivePOFragment">

    <TextView
        android:id="@+id/warehouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warehouse"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/organization_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/organization_number"
        app:layout_constraintTop_toBottomOf="@+id/warehouse"
        app:startIconDrawable="@drawable/organization_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:maxLines="1"
            android:inputType="number"
            android:digits="0123456789"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/po_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/po_number"
        app:layout_constraintTop_toBottomOf="@+id/organization_number"
        app:startIconDrawable="@drawable/orders_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:maxLines="1"
            android:inputType="number"
            android:digits="0123456789"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search"
        app:icon="@drawable/icon_search"
        app:layout_constraintTop_toBottomOf="@+id/po_number" />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/data_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="po_header_data,start_receiving,items_list"/>
    <include
        android:id="@+id/po_header_data"
        layout="@layout/po_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_receiving"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/start_receive"
        app:icon="@drawable/receive_2"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/items_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/po_header_data" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/items_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/items_list"
        app:icon="@drawable/baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="@+id/start_receiving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_receiving"
        app:layout_constraintTop_toBottomOf="@+id/po_header_data" />
    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/po_list"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/between_views_margin"-->
    <!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/po_number"-->
    <!--        tools:itemCount="3"-->
    <!--        tools:listitem="@layout/po_item_layout" />-->


</androidx.constraintlayout.widget.ConstraintLayout>